[package]
name = "tg-terrain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = "0.2.8"
glam = "0.22.0"
lerp = "0.4.0"
ordered-float = "3.4.0"
parking_lot = "0.12.1"
rayon = "1.6.0"
tinyvec = "1.6.0"
