[package]
name = "pie-crust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
arrayvec = "0.7.2"
bitvec = "1.0.1"
glam = "0.22.0"
lerp = "0.4.0"
lockfree = { version = "0.5.1", optional = true }
ordered-float = "3.4.0"
rayon = { version = "1.6.1", optional = true }

[features]
multi-thread = ["rayon", "lockfree"]
